--- a/contactus.html
+++ b/contactus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="confusionApp">
 
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" ng-controller="ContactController">
         <div class="row">
             <div class="col-xs-12">
                <ul class="breadcrumb">
@@ -142,10 +142,7 @@
 
     </div>
 
-<!-- build:js scripts/main.js -->
-    <script src="../bower_components/angular/angular.min.js"></script>
     <script src="scripts/app.js"></script>
-<!-- endbuild -->
 
 </body>
 
