--- a/contactus.html
+++ b/contactus.html
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <label for="lastname" class="col-sm-2 control-label">Last Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name">
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name" ng-model="feedback.lastName" required>
                         </div>
                     </div>
                     <div class="form-group">
@@ -94,24 +94,24 @@
                         <div class="col-xs-5 col-sm-4 col-md-3">
                             <div class="input-group">
                                 <div class="input-group-addon">(</div>
-                                    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
+                                    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code" ng-model="feedback.tel.areaCode">
                                 <div class="input-group-addon">)</div>
                             </div>
                         </div>
                         <div class="col-xs-7 col-sm-6 col-md-7">
-                                    <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
+                          <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number" ng-model="feedback.tel.number">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="emailid" class="col-sm-2 control-label">Email</label>
+                      <label for="emailid" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                          <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email" ng-model="feedback.email" required>
                         </div>
                     </div>
                     <div class="form-group">
                        <div class="checkbox col-sm-5 col-sm-offset-2">
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="approve" value="">
+                                <input type="checkbox" name="approve" value="" ng-model="feedback.agree">
                                 <strong>May we contact you?</strong>
                             </label>
                         </div>
@@ -123,10 +123,16 @@
                         </div>
                     </div>                    
                     <div class="form-group">
-                        <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
-                        </div>
+                      <label for="feedback" class="col-sm-2 control-label">Your Feedback</label>
+                      <div class="col-sm-10">
+                        <textarea
+                          class="form-control"
+                          id="feedback"
+                          name="feedback"
+                          rows="12"
+                          ng-model="feedback.comments">
+                        </textarea>
+                      </div>
                     </div> 
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
@@ -135,8 +141,9 @@
                     </div>
                 </form>
             </div>
-             <div class="col-xs-12 col-sm-3">
-                <p style="padding:20px;"></p>
+            <div class="col-xs-12 col-sm-3">
+                <h3>Your current Feedback:</h3>
+                <p>{{ feedback.firstName }} {{ feedback.lastName | uppercase }}</p>
             </div>
        </div>
 
