--- a/contactus.html
+++ b/contactus.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head 
+  <!-- The above 3 meta tags *must* come first in the head; any other head
    content must come *after* these tags -->
   <title>Ristorante Con Fusion: About Us</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+
+  <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+  
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -45,7 +48,7 @@
 
     <div class="row row-content">
       <div class="col-xs-12">
-        <h3>Location Information</h3> 
+        <h3>Location Information</h3>
       </div>
       <div class="col-xs-12 col-sm-4 col-sm-offset-1">
         <h5>Our Address</h5>
@@ -55,7 +58,7 @@
           HONG KONG<br>
           <i class="fa fa-phone"></i>: +852 1234 5678<br>
           <i class="fa fa-fax"></i>: +852 8765 4321<br>
-          <i class="fa fa-envelope"></i>: 
+          <i class="fa fa-envelope"></i>:
             <a href="mailto:confusion@food.net">confusion@food.net</a>
         </address>
       </div>
@@ -76,11 +79,25 @@
         <h3>Send us your Feedback</h3>
        </div>
       <div class="col-xs-12 col-sm-9" ng-controller="FeedbackController">
-        <form class="form-horizontal" role="form">
-          <div class="form-group">
+        <form
+          class="form-horizontal"
+          role="form"
+          name="feedbackForm"
+          ng-submit="sendFeedback()"
+          novalidate>
+          <div
+            class="form-group"
+            ng-class="{
+                'has-error' : feedbackForm.firstName.$error.required && !feedbackForm.firsname.$pristine}">
             <label for="firstname" class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
-            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name" ng-model="feedback.firstName" required>
+              <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name" ng-model="feedback.firstName" required>
+              <span
+                ng-show="feedbackForm.firstname.$error.required &&
+                !feedbackForm.firstname.$pristine"
+                class="help-block">
+                Your first name is required.
+              </span>
             </div>
           </div>
           <div class="form-group">
@@ -144,7 +161,7 @@
       <div class="col-xs-12 col-sm-3">
         <h3>Your current Feedback:</h3>
         <p>{{ feedback.firstName }} {{ feedback.lastName | uppercase }}</p>
-        <p>Contact Tel.: ({{ feedback.tel.areaCode }})</p>
+        <p>Contact Tel.: ({{ feedback.tel.areaCode }}) {{ feedback.tel.number }}</p>
         <p>Contact Email: {{ feedback.email }}</p>
         <p ng-show="feedback.agree">Contact by: {{ feedback.mychannel }}</p>
         <p>Comments: {{ feedback.comments }}</p>
@@ -153,7 +170,7 @@
 
   </div>
 
-  <script src="scripts/app.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
