--- a/contactus.html
+++ b/contactus.html
@@ -88,22 +88,31 @@
           <div
             class="form-group"
             ng-class="{
-                'has-error' : feedbackForm.firstName.$error.required && !feedbackForm.firsname.$pristine}">
+                'has-error' : feedbackForm.firstName.$error.required && !feedbackForm.firstName.$pristine}">
             <label for="firstname" class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter First Name" ng-model="feedback.firstName" required>
               <span
-                ng-show="feedbackForm.firstname.$error.required &&
-                !feedbackForm.firstname.$pristine"
+                ng-show="feedbackForm.firstName.$error.required &&
+                !feedbackForm.firstName.$pristine"
                 class="help-block">
                 Your first name is required.
               </span>
             </div>
           </div>
-          <div class="form-group">
+          <div
+            class="form-group"
+            ng-class="{
+                'has-error' : feedbackForm.lastName.$error.required && !feedbackForm.lastName.$pristine}">
             <label for="lastname" class="col-sm-2 control-label">Last Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name" ng-model="feedback.lastName" required>
+              <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter Last Name" ng-model="feedback.lastName" required>
+              <span
+                ng-show="feedbackForm.lastName.$error.required &&
+                !feedbackForm.lastName.$pristine"
+                class="help-block">
+                Your first name is required.
+              </span>
             </div>
           </div>
           <div class="form-group">
@@ -123,6 +132,24 @@
             <label for="emailid" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
               <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email" ng-model="feedback.email" required>
+             <span
+                ng-show="feedbackForm.emailid.$invalid &&
+                  !feedbackForm.emailid.$pristine"
+                class="glyphicon glyphicon-remove form-control-feedback"
+                aria-hidden="true">
+              </span>
+             <span
+                ng-show="feedbackForm.emailid.$invalid &&
+                  !feedbackForm.emailid.$pristine"
+                class="help-block">
+                Enter a valid email address.
+              </span>
+              <span
+                ng-show="feedbackForm.emailid.$error.required &&
+                  !feedbackForm.emailid.$pristine"
+                class="help-block">
+                Enter a valid email address.
+              </span>
             </div>
           </div>
           <div class="form-group">
